edit viewLive.html add youtubeURLbox

--- a/viewLive.html
+++ b/viewLive.html
@@ -70,7 +70,7 @@
             player = new YT.Player('player', {
                 height: '390',
                 width: '640',
-                videoId: "EaavFcAU0hI", // URLから取得したYouTubeライブのビデオID
+                videoId: "1Q4KSwr-HGs", // URLから取得したYouTubeライブのビデオID
                 events: {
                     'onReady': onPlayerReady
                 }
