edit index.html --edit text

--- a/index.html
+++ b/index.html
@@ -191,9 +191,9 @@
 </head>
 <body>
     <div class="container">
-        <h1>YouTube Live タイムスタンプアプリ</h1>
+        <h1>YouTube タイムスタンプ アプリ</h1>
         <div class="input-section">
-            <input type="text" id="youtubeLinkInput" placeholder="YouTube Live URLを入力">
+            <input type="text" id="youtubeLinkInput" placeholder="視聴するYouTubeのURLを入力">
             <button id="loadVideoButton">動画を読み込む</button>
         </div>
         <div id="errorMessage"></div>
